# django-from

./: LICENSE.md  README.md  setup.cfg
src/django_from/: __init__.py
src/django_from.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
