[metadata]
name = django_from
version = 0.2
author = Bernd Wechner
author_email = bwechner@yahoo.com
description = Build a queryset that selects from another queryset (queryset encapsulation)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bernd-wechner/django-from
project_urls =
    Bug Tracker = https://github.com/bernd-wechner/django-from/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Framework :: Django :: 3.2
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
license = Freely Distributable

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pycache
